--- a/sass/_maincard.scss
+++ b/sass/_maincard.scss
@@ -112,6 +112,7 @@ $dark-color: #02080E;
             width: $width-card-hd;
             height: $height-card-hd;
             box-shadow: $box-shadow-hd;
+         
         }
 
         @media (max-width: 1250px) and (orientation: landscape) {
@@ -122,7 +123,6 @@ $dark-color: #02080E;
 
             .dynamic-icon {
                 height: 100px;
-                margin-bottom: 20px;
             }
         }
 
@@ -142,7 +142,6 @@ $dark-color: #02080E;
 
             .dynamic-icon {
                 height: 100px;
-                margin-bottom: 20px;
 
             }
         }
@@ -168,6 +167,7 @@ $dark-color: #02080E;
             font-size: $font-h3-std;
             font-weight: fonts.$font-weight-bold;
             text-align: center;
+            max-width: 250px;
 
             @media (min-width: 1640px) and (orientation: landscape) {
                 font-size: $font-h3-hd;
@@ -194,7 +194,10 @@ body.dark {
         background: $dark-color;
 
         h3 {
-            margin-top: auto;
+            margin-top:50px;
+            @media screen and (max-width:1640px){
+                margin-top:25px;
+            }
             margin-bottom: 20px;
             color: $secundary-color;
         }
