--- a/sass/style.scss
+++ b/sass/style.scss
@@ -42,12 +42,13 @@ body{
     //background-size: 100% 400vh;
     //background-repeat: no-repeat;
 }
-
+html{
+    background-color: rgb(37, 37, 37);
+}
 body.dark{
 /* Rectangle 2207 */
 
 background: linear-gradient(209.75deg, rgba(0, 105, 55, 0.2) -2.17%, rgba(0, 0, 0, 0) 19.68%, rgba(0, 0, 0, 0) 19.68%), linear-gradient(180deg, rgba(46, 53, 71, 0) 6.39%, rgba(0, 0, 0, 0.3102) 10.29%, rgba(1, 1, 1, 0.5412) 13.69%, rgba(0, 0, 0, 0.66) 16.12%), linear-gradient(43.55deg, #344674 50.84%, rgba(0, 0, 0, 0) 105.99%);
-background-size: 100%;
 }
 
 
